[package]
name = "bsfs"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.15"
tokio = { version = "1", features = ["full"] }
google-cloud-storage = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
sha2 = "0.10"
crc32fast = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
hex = "0.4"
nix = { version = "0.29", features = ["fs"] }
anyhow = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
